# d2v

./: .env.example  .gitignore  PLAN.md  README.md  README.src.md  main.py  pyproject.toml
editor/: README.md  package-lock.json  package.json  tsconfig.json
editor/media/: main.css  main.js
editor/snippets/: yaml.json
editor/src/: extension.ts
examples/: sample_policy.yaml  sample_topology_large.yaml  sample_topology_medium.yaml  sample_topology_small.yaml
prompts/: design-lint.md  diagram-diff.md  diagram-evaluator-overview.md  diagram-evaluator.md  diagram-improver.md  diagram-system-overview.md  diagram-system.md  v2d-extract.md
src/d2v/: __init__.py  config.py  detgen.py  diff.py  edit_assist.py  errors.py  evaluator.py  generator.py  icons.py  parser.py  partitioner.py  pipeline.py  progress.py  prompts.py  renderer.py  validator.py  visualizer.py  zonelayout.py
src/d2v/llm/: __init__.py  anthropic_client.py  azure_openai_client.py  base.py  ollama_client.py  openai_client.py
src/d2v/v2d/: __init__.py  converter.py  evaluate.py  extractor.py  pipeline.py  preprocess.py  refine.py  schema.py
src/d2v/web/: __init__.py  app.py  events.py  jobs.py  service.py
src/d2v/web/static/: app.js  index.html  style.css
tests/: test_diff.py  test_edit_assist.py  test_evaluator.py  test_generator.py  test_icons.py  test_partitioner.py  test_pipeline.py  test_renderer_zone.py  test_v2d_converter.py  test_v2d_evaluate.py  test_v2d_preprocess_extract.py  test_v2d_refine.py  test_validator.py  test_web_api.py  test_zonelayout.py
yang/: iida-network-model.yang
