[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "d2v"
version = "0.1.0"
description = "Network topology diagram generator using LLM and Graphviz"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "anthropic>=0.25",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "graphviz",
    "pyyaml",
    "rich",
    "matplotlib",
]

[tool.hatch.build.targets.wheel]
packages = ["src/d2v"]
